objects/Expense_Travel__c.object
<CustomObject>
    <description>A copy of the data in the Expense and Travel objects.  This data is not personally identifying and can be used for aggregate comparisons across all departments.</description>
    <fields>
        <fullName>Business_Mileage__c</fullName>
        <label>Mileage (Business)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <label>Department Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <label>Expense Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Category__c</fullName>
        <label>Expense Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Date__c</fullName>
        <label>Expense Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipName>Expense_Travel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Per_Diem_Rate__c</fullName>
        <label>Per Diem Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Place_Name__c</fullName>
        <label>Place Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Description__c</fullName>
        <label>Vendor Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Expense Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department_Code__c</columns>
        <columns>Department_Name__c</columns>
        <columns>Expense__c</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Expense_Category__c</columns>
        <columns>Expense_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EAB_Account_Management</fullName>
        <columns>NAME</columns>
        <columns>Department_Code__c</columns>
        <columns>Department_Name__c</columns>
        <columns>Expense__c</columns>
        <columns>Expense_Amount__c</columns>
        <columns>Expense_Category__c</columns>
        <columns>Expense_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department_Name__c</field>
            <operation>equals</operation>
            <value>EAB Account Management</value>
        </filters>
        <label>EAB Account Management</label>
    </listViews>
    <nameField>
        <label>Expense Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Summaries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>